Fix padding to avoid content jumping when scrollbar appears

--- a/web-frontend/modules/core/assets/scss/components/filters.scss
+++ b/web-frontend/modules/core/assets/scss/components/filters.scss
@@ -5,7 +5,7 @@
 }
 
 .filters_main {
-  padding: 12px;
+  padding: 12px 18px 12px 12px;
 }
 
 .filters__none {
